# HistoricalWeatherApplication

./: README.md  historical_weather.py  pyproject.toml  test_historical_weather.py
data/: noaa_historical_weather_10yr.csv
